Install keen-slider

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "edition": "octane"
   },
   "dependencies": {
-    "@glidejs/glide": "^3.4.1"
+    "@glidejs/glide": "^3.4.1",
+    "keen-slider": "^5.4.0"
   }
 }
