--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.23.1",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-github-pages": "^0.2.2",
     "ember-cli-htmlbars": "^5.3.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sass": "^10.0.1",
